rust/macros/tests/invalid/target/debug/deps/leading_comma_rs-72ecca7cc9c67288.d
/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/libleading_comma_rs-72ecca7cc9c67288.rmeta: leading-comma.rs Cargo.toml

/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/leading_comma_rs-72ecca7cc9c67288.d: leading-comma.rs Cargo.toml

leading-comma.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
